fixed overflow x

--- a/src/styles/blocks/_body.scss
+++ b/src/styles/blocks/_body.scss
@@ -1,4 +1,4 @@
 .body {
   background: $bg-main;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
