--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -1,6 +1,7 @@
 .page {
   min-width: $min-width;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &-hidden--active {
     overflow: hidden;
