--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -26,7 +26,9 @@
   }
 
   &__cards {
-    --reveal-delay: 0.4s;
+    @include on-desktop-s {
+      --reveal-delay: 0.4s;
+    }
 
     grid-column: 1 / -1;
     display: flex;
